# void

./: Cargo.toml
backend/: .env  Cargo.toml
backend/database/: user.db
backend/migrations/2023-12-10-030753_user/: up.sql
backend/migrations/files/: up.sql
backend/migrations/users/: up.sql
backend/src/: db.rs  main.rs  model.rs  schema.rs
backend/src/api/: api_test.rs  auth.rs  dashboard.rs  registration.rs
database/: user.db
migrations/2023-12-10-035033_files/: up.sql
src/: main.rs  model.rs  schema.rs  types.rs  web_routes.rs
src/api/: api_dashboard.rs  dashboard.rs  file_transfer.rs  mod.rs  registration.rs
templates/: dashboard.html  dashboard.js  index.html  login.html  signup.html
