[package]
name = "void"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
env_logger = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
dotenv = "0.15.0"
diesel = { version = "2.1.1", features = ["sqlite", "chrono", "r2d2"] }
jwt = "0.16.0"
sha2 = "0.10.7"
hmac = "0.12.1"
pwhash = "1.0.0"
uuid = { version = "1.4.1", features = ["v4"] }
